<resources>
    <string name="app_name">TRB1</string>
    <string name="cadastro_de_livro">Cadastro de Livro</string>
    <string name="cadastro_de_participante">Cadastro de Participante</string>
    <string name="cadastro_de_reserva">Cadastro de Reserva</string>
    <string name="lista_de_participantes">Lista de Participantes</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="e_mail">E-mail</string>
    <string name="nome">Nome</string>
    <string name="ano_de_publica_o">Ano de Publicação</string>
    <string name="editora">Editora</string>
    <string name="t_tulo">Título</string>
    <string name="participante">Participante</string>
    <string name="listar_livros">Listar Livros</string>
    <string name="lista_de_livros">Lista de Livros</string>
    <string name="lista_de_reservas">Lista de Reservas</string>
    <string name="livro">Livro</string>
    <string name="hor_rio_de_entrada">Horário de entrada</string>
    <string name="hor_rio_de_sa_da">Horário de saída</string>
</resources>
